# template_rs

./: Cargo.toml  README.md
examples/: data_processing.tmrs  hello_world.tmrs  math_example.tmrs  usage.rs
src/: lib.rs
