[package]
name = "template_rs"
version = "0.1.0"
edition = "2021"
description = "A template engine for Rust code with inline placeholders"
license = "MIT"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
tempfile = { version = "3.8", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
which = { version = "4.4", optional = true }

[features]
default = []
execute = ["dep:tempfile", "dep:tokio", "dep:which"]
